--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RouteGarage</title>
+  <title>Routa Garage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" type=".assets/logo/routa-garage-wheel.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
